kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: defi-providers
spec:
  selector:
    app: defi-providers
  ports:
    - name: defi-providers-grpc
      port: 443
      targetPort: grpc-port
