kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defi-providers
  annotations:
    cert-manager.io/issuer: dappradar-cluster-issuer
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  ingressClassName: nginx
  rules:
    - host: "" # set in overlay
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: defi-providers
              port:
                number: 8080

  tls:
    # specifying a host in the TLS section will tell cert-manager what
    # DNS SANs should be on the created certificate.
    - hosts:
      - "" # set in overlay
      # cert-manager will create this secret
      secretName: defi-providers-tls
